# px4_portfolio

./: .gitignore  LICENSE  README.md
missions/: CMakeLists.txt  package.xml
missions/config/: ros_gz_bridge_config.yaml
missions/extras/: setup.sh  start_sim_cmds.sh
missions/extras/YOLO/: get_yolo.py
missions/extras/YOLO/py_venv/: pyvenv.cfg
missions/extras/airframes/: 22000_gz_x500_custom_2  CMakeLists.txt
missions/extras/models/mono_cam_custom_2/: model.config  model.sdf
missions/extras/models/mono_cam_down_custom_2/: model.config  model.sdf
missions/extras/models/x500_base_custom_2/: model.config  model.sdf
missions/extras/models/x500_base_custom_2/meshes/: 1345_prop_ccw.stl  1345_prop_cw.stl  5010Base.dae  5010Bell.dae  NXP-HGD-CF.dae
missions/extras/models/x500_custom_2/: model.config  model.sdf
missions/extras/worlds/: custom.sdf  uav_arena.kra
missions/include/missions/: pid_.hpp
missions/launch/: helper_nodes.yaml  simulation.yaml
missions/src/: controller.cpp  line_detector.cpp  pid_.cpp
ros2_px4_portfolio/: CMakeLists.txt  package.xml
ros2_px4_portfolio/include/ros2_px4_portfolio/: pid_.hpp
ros2_px4_portfolio/src/: controller.cpp  pid_.cpp
ros_aruco_opencv/aruco_opencv/include/aruco_opencv/: parameters.hpp
ros_aruco_opencv/aruco_opencv/src/: aruco_tracker.cpp  parameters.cpp
