<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>missions</name>
  <version>0.0.1</version>
  <description>A collection of ROS2 nodes written for my engineering portfolio.</description>
  <maintainer email="valerian.greg@gmail.com">Valerian Gregoire--Begranger</maintainer>
  <license>MIT</license>

  
  <depend>rclcpp</depend>
  <depend>chrono</depend> 
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>aruco_opencv_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
